ISPN-14345 JDK HttpClient
* Remove OkHttp
* Upgrade Keycloak used in tests to the latest Quarkus-based build